samples/_failures_safe/1761296666_cb57cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41e543dc.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_41e543dc.c:152:24: error: ‘INT’ undeclared (first use in this function)
  152 |         if (dist[i] == INT
      |                        ^~~
./samples/SAFE/__tmp_41e543dc.c:152:24: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_41e543dc.c:152:27: error: expected ‘)’ at end of input
  152 |         if (dist[i] == INT
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_41e543dc.c:152:9: error: expected declaration or statement at end of input
  152 |         if (dist[i] == INT
      |         ^~
./samples/SAFE/__tmp_41e543dc.c:152:9: error: expected declaration or statement at end of input
